--- a/about.html
+++ b/about.html
@@ -134,8 +134,8 @@
                 <div class="col-md-8">
                     
                     <div class="welcome-inner">
-                        <div class="row ">
-                            <p class="title2">项目目的:：</p>
+                        <div class="row row-new">
+                            <p class="title2">项目目的:</p>
                             <br>
                             <p>闭眼看世界项目旨在设计一个APP应用,通过实时视频通话的方式让志愿者解决盲人遇到的问题。
                                 利用AI对话获取实时消息，例如天气、新闻、旅行安排等，利用AI识图返回结果，具体可用在“判断药品和食品生产日期是否过期”，
