--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="site-branding">
                     <div id="site-identity">
-                        <a href="index.html" class="logo"><img src="images/logo.png" alt="logo"></a>
+                        <a href="index.html" class="logo"><img src="images/logo1.png" alt="logo"></a>
                     </div>
                     <!-- #site-identity -->
                 </div>
@@ -330,20 +330,18 @@
                             <div class="col-md-6 col-sm-6 col-sm-12">
                                 <ul>
                                     <li><a href="#">home</a></li>
-                                    <li><a href="#">about</a></li>
-                                    <li><a href="#">services</a></li>
-                                    <li><a href="#">projects</a></li>
-                                    <li><a href="#">contact</a></li>
+                                    <li><a href="about.html">about</a></li>
+                                    <li><a href="https://www.zgmx.org.cn/newsdetail/d-55800-0.html" target="_blank">services</a></li>
+                                    <li><a href="contact.html" target="_blank">contact</a></li>
 
                                 </ul>
                             </div>
                             <div class="col-md-6 col-sm-6 col-sm-12">
                                 <ul>
-                                    <li><a href="#">News</a></li>
-                                    <li><a href="#">Trade</a></li>
-                                    <li><a href="#">Investment</a></li>
-                                    <li><a href="#">projects</a></li>
-                                    <li><a href="#">contact</a></li>
+                                    <li><a href="https://www.gov.cn/zhengce/content/2021-07/21/content_5626391.htm" target="_blank">news</a></li>
+                                    <li><a href="https://mc.dfrobot.com.cn/thread-309617-1-1.html" target="_blank">find</a></li>
+                                    <li><a href="https://chinavolunteer.mca.gov.cn/site/home" target="_blank">volunteer</a></li>
+                                    <li><a href="https://www.cfdp.org/" target="_blank">policy</a></li>
 
                                 </ul>
                             </div>
@@ -373,6 +371,7 @@
         </div>
 
     </footer>
+    <!--Footer Bottom-->
     
 
     <!-- scroll top -->
