--- a/contact.html
+++ b/contact.html
@@ -176,20 +176,18 @@
                             <div class="col-md-6 col-sm-6 col-sm-12">
                                 <ul>
                                     <li><a href="#">home</a></li>
-                                    <li><a href="#">about</a></li>
-                                    <li><a href="#">services</a></li>
-                                    <li><a href="#">projects</a></li>
-                                    <li><a href="#">contact</a></li>
+                                    <li><a href="about.html">about</a></li>
+                                    <li><a href="https://www.zgmx.org.cn/newsdetail/d-55800-0.html" target="_blank">services</a></li>
+                                    <li><a href="contact.html" target="_blank">contact</a></li>
 
                                 </ul>
                             </div>
                             <div class="col-md-6 col-sm-6 col-sm-12">
                                 <ul>
-                                    <li><a href="#">News</a></li>
-                                    <li><a href="#">Trade</a></li>
-                                    <li><a href="#">Investment</a></li>
-                                    <li><a href="#">projects</a></li>
-                                    <li><a href="#">contact</a></li>
+                                    <li><a href="https://www.gov.cn/zhengce/content/2021-07/21/content_5626391.htm" target="_blank">news</a></li>
+                                    <li><a href="https://mc.dfrobot.com.cn/thread-309617-1-1.html" target="_blank">find</a></li>
+                                    <li><a href="https://chinavolunteer.mca.gov.cn/site/home" target="_blank">volunteer</a></li>
+                                    <li><a href="https://www.cfdp.org/" target="_blank">policy</a></li>
 
                                 </ul>
                             </div>
