--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="col-md-5 col-sm-5 col-xs-5">
                         <ul class="tophead-link">
-                            <li><a href="about.html"><i > 欢迎来到闭眼看世界app服务中心</i></a></li>
+                            <li><a href="about.html"><i > 欢迎来到“闭眼看世界”服务中心</i></a></li>
                         </ul>
                     </div>
 
