--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                 <p>May 27, 2024</p>
                             </div>
                             <h3><a href=" #" title="Details ">视觉帮助者界面</a></h3>
-                            <p>盲人可以通过选择AI对话，向AI提问或者获取帮助；也可以通过图像识别来帮助盲人识别物体或文字，标签信息</p>
+                            <p>盲人可以通过选择AI对话，也可以选择图像识别</p>
 
                             <div class="course-bottom">
                                 <span><i class="fa fa-users"></i>5</span>
@@ -413,6 +413,45 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="course-item">
+                        <div class="course-img ">
+                            <img class="img-responsive " src="images/function/10.jpg " alt="image" />
+                        </div>
+                        <div class="course-detail ">
+                            <div class="course-date">
+                                <p>April 17, 2024</p>
+                            </div>
+                            <h3><a href="# " title="Details ">AI识图 </a></h3>
+                            <p>盲人可以通过AI识别物品，标签，文字等</p>
+
+                            <div class="course-bottom">
+                                <span><i class="fa fa-users"></i>10</span>
+                                <span><i class="fa fa-comment"></i>7</span>
+                                <span class="pull-right free">free</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="course-item">
+                        <div class="course-img ">
+                            <img class="img-responsive " src="images/function/11.jpg " alt="image" />
+                        </div>
+                        <div class="course-detail ">
+                            <div class="course-date">
+                                <p>April 17, 2024</p>
+                            </div>
+                            <h3><a href="# " title="Details ">AI对话 </a></h3>
+                            <p>盲人可以通过AI对话询问天气等</p>
+
+                            <div class="course-bottom">
+                                <span><i class="fa fa-users"></i>10</span>
+                                <span><i class="fa fa-comment"></i>7</span>
+                                <span class="pull-right free">free</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
