--- a/index.html
+++ b/index.html
@@ -620,35 +620,21 @@
     <section class="homepage-event section">
         <div class="container">
             <div class="title sec-title">
-                <h2>Event Upcoming</h2>
-                <p>Edustar is world top education consultancy ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum ante vel aliquet euismod.</p>
+                <h2>公告</h2>
+                <p>针对一些常见问题，我们对软件进行了一些调整，更新和优化</p>
             </div>
             <div class="row">
                 <div class="col-md-8 ">
                     <div class="row">
                         <div class="event-block">
                             <ul>
-                                <li><span class="event-date">24</span>
-                                    <span class="event-month">May</span></li>
+                                <li><span class="event-date">27</span>
+                                    <span class="event-month">April</span></li>
                                 <li>
                                     <div>
-                                        <span class="event-time">8:00 am - 5:00 pm Cicago , USA</span>
-                                        <h4><a href="#">Comapare Prices and find the best accessories</a></h4>
-                                        <p>Every new computer that broughts home from the store has an operating system installed onto it. But what must new computer .</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <button class="button btn btn-primary">apply</button>
-                                </li>
-                            </ul>
-                            <ul>
-                                <li><span class="event-date">26</span>
-                                    <span class="event-month">JULY</span></li>
-                                <li>
-                                    <div>
-                                        <span class="event-time">8:00 am - 5:00 pm Cicago , USA</span>
-                                        <h4><a href="#">Comapare Prices and find the best accessories</a></h4>
-                                        <p>Every new computer that broughts home from the store has an operating system installed onto it. But what must new computer .</p>
+                                        <span class="event-time">2024-4-27 version-3.2</span>
+                                        <h4>界面优化</h4>
+                                        <p>本次更新对界面，性能等进行了优化，提高了用户的体验感</p>
                                     </div>
                                 </li>
                                 <li>
@@ -657,12 +643,26 @@
                             </ul>
                             <ul>
                                 <li><span class="event-date">27</span>
-                                    <span class="event-month">AUG</span></li>
+                                    <span class="event-month">April</span></li>
                                 <li>
                                     <div>
-                                        <span class="event-time">8:00 am - 5:00 pm Cicago , USA</span>
-                                        <h4><a href="#">Comapare Prices and find the best accessories</a></h4>
-                                        <p>Every new computer that broughts home from the store has an operating system installed onto it. But what must new computer .</p>
+                                        <span class="event-time">2024-4-27 version-3.2</span>
+                                        <h4>新增功能</h4>
+                                        <p>本次更新新增了更多的社区，用户可以进一步探索</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <button class="button btn btn-primary">apply</button>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li><span class="event-date">27</span>
+                                    <span class="event-month">April</span></li>
+                                <li>
+                                    <div>
+                                        <span class="event-time">2024-4-27 version-3.2</span>
+                                        <h4>修复</h4>
+                                        <p>本次更新修复了聊天异常的bug</p>
                                     </div>
                                 </li>
                                 <li>
